Changes towards version 0.7:
- Added Input Frames to pause code to stop infinite loops - Michael
- Added more netplay debug code - SvdB
- Added uio_fprintf() and uio_vfprintf() - SvdB
- Any input will register for at least one frame (Bug #864) - Michael
- Many VControl cleanups - Michael
- Fix compilation without Netplay support - SvdB
- Added limited AIFF sound file decoder for playing 3DO originals;
  SDX2 decoder by SvdB - Alex
- Typo fix in Starbase speech (bug #959) - Michael
- (MacOS) Don't package up .svn dirs with 'build.sh uqm install' (bug #958),
  from Nic.
- No more extra newlines to log_add() calls for libs/network/ code - SvdB
- DUCK videos now play correctly after a video mode change; bug #734 - Alex
- Cancel key will now quit out of the Manifest Menu (Bug #838) - Michael
- Added -w and -x commandline options, to counter -f and -o; used these 
  to implement "Safe Mode" links in the Win32 installer (Bug #946)
  - Michael
- OpenGL texture loading uses surface pitch instead of screen width.  
  This should head off future bugs similar to Bug #740 (this issue was 
  reported as Bug #956) - Michael

0.6.2 (maintenance release):
- A bit more debug info for failed connects. - SvdB
- Exit with failure if basic content cannot be found, ensuring proper
  error reporting under Windows - Michael
- Popup windows for "Really Exit?" and Game Pause are immune to fades 
  and crossfades (Bug #455) - Michael
- No longer depend on SDLK_LAST statically; key input should now be safe 
  if compiled with a different version of SDL than the one running the 
  program (Bug #936, possibly also #834 and #883) - Michael
- Unix build scripts now work under LC_CTYPE=tr_TR - SvdB
- Flush write buffer when doing a uio_fclose() after doing only
  uio_fwrite() operations. - SvdB
- Major rewrite of the SwapBuffers commands -- screen compositing logic 
  has all been abstracted out into sdl_common.c instead of being 
  nearly-duplicated in opengl.c and pure.c - Michael
